--- a/rapport.tex
+++ b/rapport.tex
@@ -12,6 +12,17 @@
 	\author{Tristan François et Alexandre Moine}
 	\maketitle
 	
+\section{Compilation}
+Le projet nécessite \verb|dune| pour être compilé correctement:\\
+\verb|$ dune build bin/mondrian.exe|
+
+Pour exécuter le projet, lancer:\\
+\verb|$ dune exe bin/mondrian.exe|
+
+\section{Menu}
+Le premier menu permet de choisir entre le jeu d'origine (avec deux couleurs possibles pour les rectangles) ou le jeu étendu (avec trois couleurs possibles par rectangles).
+Une fois le mode choisit, l'utilisateur peut choisir la profondeur maximale de la partition de l'espace qui va être générée.
+
 \section{Problème à 3 couleurs}
 
 Nous avons implémenté une généralisation du problème avec 3 couleurs. Dans cette variante :
@@ -31,7 +42,7 @@ Nous avons implémenté une généralisation du problème avec 3 couleurs. Dans 
 Nous générons une forme normale conjonctive (FNC) représentant le problème pour 2 couleurs, mais nous n'y sommes pas arrivés pour 3 couleurs. Nous avons donc implémenté l'algorithme de Tseitin (amélioré par Plaisted-Greenbaum) permettant de transformer n'importe quelle formule en FNC en temps linéaire.
 Cette méthode a néanmoins le défaut de générer une formule comportant beaucoup de variables. À titre d'exemple, une formule faisant intervenir 25 rectangles à l'origine compte plus de 2500 variables à la sortie de l'algorithme (en fait, une nouvelle variable a (presque) été ajoutée pour chaque sous-formule de la formule d'origine).
 
-Ce travail se trouve dans le fichier $lib/tseitin.ml$.
+Ce travail se trouve dans le fichier \verb|lib/tseitin.ml|.
 
 \section{SAT Solver}
 Le SAT Solver fourni pour le projet a clairement montré ses limites avec autant de variables, nous avons donc tenté de l'améliorer. L'idée est que l'algorithme de Tseitin produit énormément de 2-clauses (des clauses ne contenant que 2 variables). Par exemple, une formule générée par l'algorithme de Tseitin avec 2000 clauses en contient presque 1500.\\
