--- a/rapport.tex
+++ b/rapport.tex
@@ -38,17 +38,17 @@ Nous avons implémenté une généralisation du problème avec 3 couleurs. Dans 
 	
 \section{Génération de formule}
 
-Nous avons réussi à générer très efficacement une formule en forme normal conjonctive dans le cas d'un jeu à deux couleur. Le principe est le suivant :
+Nous avons réussi à générer très efficacement une formule en forme normal conjonctive dans le cas d'un jeu à deux couleurs. Le principe est le suivant :
 
 Soit $l$ une ligne à $n$ rectangles adjacents. La ligne $l$ possède $k$ rectangles rouges si dans tout groupe de $n-k+1$ rectangles il y en a au moins un rouge. Ainsi, il suffit de générer tout les arrangement de $n-k+1$ rectangles et de vérifier si il y a un rouge dans chacun. Cela se traduit par une forme normal conjonctive.
 
-Cependant cette méthode ne permet pas de générer des formules justes et directement en forme normal conjonctive dans le jeu à 3 couleurs car une ligne avec 7 rectangles adjacent peut être, par exemple, verte avec 3 rectangles vert, 2 rouges et 2 bleus mais rouge avec les mêmes 3 rectangles verts et 4 rectangles rouges.
+Cependant cette méthode ne permet pas de générer des formules justes et directement en forme normale conjonctive dans le jeu à 3 couleurs car une ligne avec 7 rectangles adjacents peut être, par exemple, verte avec 3 rectangles verts, 2 rouges et 2 bleus mais rouge avec les mêmes 3 rectangles verts et 4 rectangles rouges.
 
 Nous n'avons en tout cas pas réussi à générer une formule directement en forme normal conjonctive pour le jeu à 3 couleurs. Nous avons donc du implémenté un algorithme pour transformer notre formule en forme normal conjonctive.
 
 
 \section{Tseitin}
-Nous générons une forme normale conjonctive (FNC) représentant le problème pour 2 couleurs, mais nous n'y sommes pas arrivés pour 3 couleurs. Nous avons donc implémenté l'algorithme de Tseitin (amélioré par Plaisted-Greenbaum) permettant de transformer n'importe quelle formule en FNC en temps linéaire.
+Nous avons implémenté l'algorithme de Tseitin (amélioré par Plaisted-Greenbaum) permettant de transformer n'importe quelle formule en FNC en temps linéaire.
 Cette méthode a néanmoins le défaut de générer une formule comportant beaucoup de variables. À titre d'exemple, une formule faisant intervenir 25 rectangles à l'origine compte plus de 2500 variables à la sortie de l'algorithme (en fait, une nouvelle variable a (presque) été ajoutée pour chaque sous-formule de la formule d'origine).
 
 Ce travail se trouve dans le fichier \verb|lib/tseitin.ml|.
